--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="header-content container">
-        <div class="header-logo">FlexFlow123</div>
+        <div class="header-logo">FlexFlow</div>
         <nav class="header-nav">
           <ul>
             <li><a href="#">Главная</a></li>
