price block added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <nav class="header-nav">
           <ul>
             <li><a href="#">Главная</a></li>
-            <li><a href="#">Цены</a></li>
+            <li><a href="#prices">Цены</a></li>
             <li><a href="#">Блог</a></li>
             <li><a href="#">О компании</a></li>
           </ul>
@@ -107,7 +107,7 @@
     </header>
 
     <main>
-      <section  class="hero-section">
+      <section class="hero-section">
         <div class="hero-section_content container">
           <h1>
             Digital агенство <br />
@@ -124,7 +124,7 @@
           </div>
         </div>
       </section>
-      <section  class="companies">
+      <section class="companies">
         <div class="container">
           <p class="companies-title">
             Более 400+ компаний по всему миру доверяют нам
@@ -153,7 +153,7 @@
           </ul>
         </div>
       </section>
-      <section  class="services">
+      <section class="services">
         <div class="container">
           <h2 class="services-title">Услуги</h2>
           <p class="services-subtitle">Что мы предлагаем</p>
@@ -248,7 +248,7 @@
           </ul>
         </div>
       </section>
-      <section  class="about-servey">
+      <section class="about-servey">
         <div class="servey-content container">
           <div>
             <h2 class="servey-title">
@@ -268,7 +268,7 @@
           <img src="images/Survey.png" alt="Опрос" class="servey-image" />
         </div>
       </section>
-      <section  class="about-price">
+      <section class="about-price">
         <div class="price-content container">
           <img src="images/Price.png" alt="Опрос" class="servey-image" />
           <div>
@@ -283,12 +283,14 @@
               клиенту для максимальной эффективности.
             </p>
             <div class="price-actions">
-              <button class="button button--secondary">Посмотреть цены</button>
+              <button class="button button--secondary price">
+                Посмотреть цены
+              </button>
             </div>
           </div>
         </div>
       </section>
-      <section  class="portfolio">
+      <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Портфолио</h2>
           <p class="portfolio-subtitle">Наши кейсы</p>
@@ -338,7 +340,7 @@
           </ul>
         </div>
       </section>
-      <section  class="project-discussion">
+      <section class="project-discussion">
         <div class="project-discussion_content">
           <div class="project-discussion_title">Давайте начнем работу</div>
           <div class="project-discussion_subtitle">
@@ -352,6 +354,178 @@
             <button class="button button--secondary">Как мы работаем</button>
             <button class="button button--primary">Заполнить заявку</button>
           </div>
+        </div>
+      </section>
+      <section class="prices">
+        <div class="container">
+          <h2 id="prices" class="prices-title">Цены на услуги</h2>
+          <p class="prices-subtitle">
+            Выберите подходящий вариант и свяжитесь с нами, мы<br />
+            проконсультируем и подберем под вас гибкий тариф.
+          </p>
+          <div class="prices-discussion_actions">
+            <button class="button button--secondary tel">
+              Получить консультацию
+              <svg
+                width="18"
+                height="18"
+                viewBox="0 0 18 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M3.54 2C3.6 2.89 3.75 3.76 3.99 4.59L2.79 5.79C2.38 4.59 2.12 3.32 2.03 2H3.54ZM13.4 14.02C14.25 14.26 15.12 14.41 16 14.47V15.96C14.68 15.87 13.41 15.61 12.2 15.21L13.4 14.02ZM4.5 0H1C0.45 0 0 0.45 0 1C0 10.39 7.61 18 17 18C17.55 18 18 17.55 18 17V13.51C18 12.96 17.55 12.51 17 12.51C15.76 12.51 14.55 12.31 13.43 11.94C13.33 11.9 13.22 11.89 13.12 11.89C12.86 11.89 12.61 11.99 12.41 12.18L10.21 14.38C7.38 12.93 5.06 10.62 3.62 7.79L5.82 5.59C6.1 5.31 6.18 4.92 6.07 4.57C5.7 3.45 5.5 2.25 5.5 1C5.5 0.45 5.05 0 4.5 0Z"
+                  fill="#734CF5"
+                />
+              </svg>
+            </button>
+          </div>
+          <ul class="prices-list">
+            <li class="prices-item-1">
+              <p class="prices-item-name">Дизайн</p>
+              <p class="prices-item-subtitle">
+                <span class="big">₽150.000</span>&nbsp;/по частям
+              </p>
+              <p class="prices-item-subtitle">
+                Идеально для малых бизнесов и стартапов, которые хотят создать
+                свой узнаваемый стиль. Поможет выделиться среди конкурентов
+                засчет уникальности.
+              </p>
+              <p class="prices-get">Что вы получите</p>
+
+              <div class="block">
+                <span
+                  ><img src="images/check_circle.png" alt="" />Логотип
+                  ифирменный стиль
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/check_circle.png" alt="" />Один концепт
+                  дизайна
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/check_circle.png" alt="" />Дизайн для 10
+                  страниц
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/check_circle.png" alt="" />Анимации и
+                  интерактивные элементы
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/check_circle.png" alt="" />Правки до
+                  финального утверждения
+                </span>
+              </div>
+            </li>
+            <li class="prices-item-2">
+              <p class="prices-item-name">Мобильное приложение</p>
+              <p class="prices-item-subtitle">
+                <span class="big">₽700.000</span>&nbsp;/по частям
+              </p>
+              <p class="prices-item-subtitle">
+                Подходит для проектов с высокими требованиями, где необходимо
+                создать уникальное приложение с персонализированными функциями.
+              </p>
+              <p class="prices-get-1">Что вы получите</p>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Мобильное приложение для
+                  iOS и Android
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Интеграция с внешними
+                  сервисами и API
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Анимации и оригинальный
+                  дизайн
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Поддержка в течение 3
+                  месяцев
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Проектирование UX/UI
+                </span>
+              </div>
+              <div class="block">
+                <span><img src="images/logo.png" alt="" />Тестирование </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Публикация в магазины
+                  приложений
+                </span>
+              </div>
+            </li>
+            <li class="prices-item-3">
+              <p class="prices-item-name">Веб-сайт</p>
+              <p class="prices-item-subtitle">
+                <span class="big">₽250.000</span>&nbsp;/по частям
+              </p>
+              <p class="prices-item-subtitle">
+                Подходит для компаний, которым нужен многостраничный сайт, чтобы
+                наглядно представить свои услуги или продукты, а так же
+                рассказать о компании.
+              </p>
+              <p class="prices-get-1">Что вы получите</p>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Многостраничный сайт до
+                  10 страниц
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Уникальный дизайн
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Интеграция социальных
+                  сетей
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Поддержка в течение 3
+                  месяцев
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />SEO-оптимизация
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Интеграция CRM и других
+                  систем
+                </span>
+              </div>
+              <div class="block">
+                <span
+                  ><img src="images/logo.png" alt="" />Публикация в магазины
+                  приложений
+                </span>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <footer class="footer">
