--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
           <ul>
             <li><a href="#">Главная</a></li>
             <li><a href="#prices">Цены</a></li>
-            <li><a href="#">Блог</a></li>
+            <li><a href="#blog">Блог</a></li>
             <li><a href="#">О компании</a></li>
           </ul>
         </nav>
         <div class="header-actions">
-          <button class="telegram-button button button--primary">
+          <button
+            class="telegram-button button button--prproject-discussion_descriptionry"
+          >
             Написать в Telegram<svg
               width="16"
               height="16"
@@ -524,6 +526,110 @@
                   приложений
                 </span>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="blog" id="blog">
+        <div class="content container">
+          <h2 class="blog-title">Наш блог</h2>
+          <p class="blog-subtitle">
+            Здесь мы делимся полезными знаниями и новостями компании.
+          </p>
+          <div class="blog-actions">
+            <button class="button button--secondary">Об IT</button>
+            <button class="button button--secondary">Новости компании</button>
+            <button class="button button--secondary">Полезные знания</button>
+            <button class="button button--secondary">Про маркетинг</button>
+            <button class="button button--secondary">Про дизайн</button>
+            <button class="button button--secondary">Про разработку</button>
+          </div>
+          <ul class="blog-list">
+            <li class="blog-item">
+              <img
+                class="blog-item_image"
+                src="images/image-1.png"
+                alt="Полезные знания"
+              />
+              <p class="blog-item_title">Полезные знания</p>
+              <p class="blog-item_description">
+                Как выбрать подходящую платформу для мобильного приложения?
+              </p>
+              <p class="blog-item_description-1">
+                Выбор платформы для мобильного приложения может оказаться
+                сложной задачей. В этом посте мы рассмотрим плюсы и минусы
+                различных платформ, включая нативную и кроссплатформенную
+                разработку. Мы поделимся советами, как определить идеальный
+                вариант для вашего проекта, исходя из целевой аудитории и
+                бюджета.
+              </p>
+              <p class="blog-item_description-data">21.11.2024</p>
+            </li>
+            <li class="blog-item">
+              <img
+                class="blog-item_image"
+                src="images/image-2.png"
+                alt="Про дизайн"
+              />
+              <p class="blog-item_title">Про дизайн</p>
+              <p class="blog-item_description">
+                Тренды в дизайне интерфейсов в 2024 году
+              </p>
+              <p class="blog-item_description-1 text-2">
+                В мире дизайна важен не только талант, но и правильные
+                инструменты. В этом посте мы собрали список незаменимых
+                приложений и утилит для UX/UI-дизайнеров, которые помогут
+                ускорить процесс разработки и улучшить качество
+                пользовательского опыта. Узнайте, какие инструменты рекомендуют
+                профессионалы!
+              </p>
+              <div class="blokdata">
+                <p class="blog-item_description-data">18.11.2024</p>
+              </div>
+            </li>
+            <li class="blog-item">
+              <img
+                class="blog-item_image"
+                src="images/image-3.png"
+                alt="Про разработку/Полезные знания"
+              />
+              <div class="block-blog">
+                <p class="blog-item_title-3">Про разработку</p>
+                <p class="blog-item_title-3">Полезные знания</p>
+              </div>
+              <p class="blog-item_description">
+                10 ошибок при разработке приложений и как их избежать
+              </p>
+              <p class="blog-item_description-1 text-3">
+                При разработке приложений легко столкнуться с распространенными
+                ошибками, которые могут негативно повлиять на успех проекта. В
+                этом посте мы собрали 10 основных ошибок, которые следует
+                избегать, и поделимся полезными советами, как защитить свой
+                проект и обеспечить его успех на рынке. Узнайте, как сделать
+                ваше приложение лучше!
+              </p>
+              <p class="blog-item_description-data">10.11.2024</p>
+            </li>
+            <li class="blog-item">
+              <img
+                class="blog-item_image"
+                src="images/image-4.png"
+                alt="Новости компании"
+              />
+              <p class="blog-item_title">Новости компании</p>
+              <p class="blog-item_description">
+                Новые достижения нашей команды: итоги квартала
+              </p>
+              <p class="blog-item_description-1">
+                Мы рады поделиться с вами последними новостями из нашей
+                компании! В этом посте мы подведем итоги прошедшего квартала и
+                расскажем о наших больших достижениях. Наша команда успешно
+                завершила несколько важных проектов, внедрила новые технологии и
+                расширила клиентскую базу. Кроме того, мы провели несколько
+                социальных мероприятий и тренингов, направленных на развитие
+                наших сотрудников.
+              </p>
+              <p class="blog-item_description-data">31.10.2024</p>
             </li>
           </ul>
         </div>
