Added a block about the company

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <nav class="mobile-nav">
             <ul>
               <li><a href="#">Главная</a></li>
-              <li><a href="#">Цены</a></li>
-              <li><a href="#">Блог</a></li>
-              <li><a href="#">О компании</a></li>
+              <li><a href="prices.html">Цены</a></li>
+              <li><a href="blog.html">Блог</a></li>
+              <li><a href="About-the-company.html">О компании</a></li>
             </ul>
           </nav>
         </div>
@@ -46,9 +46,9 @@
         <nav class="header-nav">
           <ul>
             <li><a href="#">Главная</a></li>
-            <li><a href="#prices">Цены</a></li>
-            <li><a href="#blog">Блог</a></li>
-            <li><a href="#">О компании</a></li>
+            <li><a href="prices.html">Цены</a></li>
+            <li><a href="blog.html">Блог</a></li>
+            <li><a href="About-the-company.html">О компании</a></li>
           </ul>
         </nav>
         <div class="header-actions">
@@ -360,7 +360,7 @@
       </section>
       <section class="prices">
         <div class="container">
-          <h2 id="prices" class="prices-title">Цены на услуги</h2>
+          <h2 class="prices-title">Цены на услуги</h2>
           <p class="prices-subtitle">
             Выберите подходящий вариант и свяжитесь с нами, мы<br />
             проконсультируем и подберем под вас гибкий тариф.
@@ -530,7 +530,7 @@
           </ul>
         </div>
       </section>
-      <section class="blog" id="blog">
+      <section class="blog">
         <div class="content container">
           <h2 class="blog-title">Наш блог</h2>
           <p class="blog-subtitle">
@@ -632,6 +632,55 @@
               <p class="blog-item_description-data">31.10.2024</p>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="About-company">
+        <div class="container-companya container">
+          <h1 class="about-company-title">О компании</h1>
+          <p class="about-company-subtitle">
+            Здесь мы делимся полезными знаниями и новостями компании.
+          </p>
+        </div>
+        <div class="about-company-static container">
+          <div class="about-company-static-block">
+            <p class="about-company-static-description">
+              Мы команда единомышленников, объединенных страстью к технологиям.
+              Мы разрабатываем дизайны и приложения, которые не просто
+              привлекают внимание, но и решают реальные задачи бизнеса. Вместе
+              мы воплотим вашу идею в жизни, создавая продукт, который будет
+              работать на вас.
+            </p>
+
+            <div class="about-company-stati-grid">
+              <div class="about-company-stati-item">
+                <span class="number">8 лет</span>
+                <p class="description">
+                  помогаем разрабатывать инновационные IT решения
+                </p>
+              </div>
+              <div class="about-company-stati-item">
+                <span class="number">80+ клиентов</span>
+                <p class="description">
+                  среди которых 90% возвращаются к нам снова
+                </p>
+              </div>
+
+              <div class="about-company-stati-item">
+                <span class="number">4 офиса</span>
+                <p class="description">
+                  в ежедневном режиме работают по всей стране
+                </p>
+              </div>
+
+              <div class="about-company-stati-item">
+                <span class="number">30+ наград</span>
+                <p class="description">
+                  получили наши проекты на международных конкурсах
+                </p>
+              </div>
+            </div>
+          </div>
+          <img src="images/company.png" alt="" class="about-company-image" />
         </div>
       </section>
       <footer class="footer">
