--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
           </ul>
         </nav>
         <div class="header-actions">
-          <button
-            class="telegram-button button button--prproject-discussion_descriptionry"
-          >
+          <button class="telegram-button button button--primary">
             Написать в Telegram<svg
               width="16"
               height="16"
@@ -358,331 +356,7 @@
           </div>
         </div>
       </section>
-      <section class="prices">
-        <div class="container">
-          <h2 class="prices-title">Цены на услуги</h2>
-          <p class="prices-subtitle">
-            Выберите подходящий вариант и свяжитесь с нами, мы<br />
-            проконсультируем и подберем под вас гибкий тариф.
-          </p>
-          <div class="prices-discussion_actions">
-            <button class="button button--secondary tel">
-              Получить консультацию
-              <svg
-                width="18"
-                height="18"
-                viewBox="0 0 18 18"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M3.54 2C3.6 2.89 3.75 3.76 3.99 4.59L2.79 5.79C2.38 4.59 2.12 3.32 2.03 2H3.54ZM13.4 14.02C14.25 14.26 15.12 14.41 16 14.47V15.96C14.68 15.87 13.41 15.61 12.2 15.21L13.4 14.02ZM4.5 0H1C0.45 0 0 0.45 0 1C0 10.39 7.61 18 17 18C17.55 18 18 17.55 18 17V13.51C18 12.96 17.55 12.51 17 12.51C15.76 12.51 14.55 12.31 13.43 11.94C13.33 11.9 13.22 11.89 13.12 11.89C12.86 11.89 12.61 11.99 12.41 12.18L10.21 14.38C7.38 12.93 5.06 10.62 3.62 7.79L5.82 5.59C6.1 5.31 6.18 4.92 6.07 4.57C5.7 3.45 5.5 2.25 5.5 1C5.5 0.45 5.05 0 4.5 0Z"
-                  fill="#734CF5"
-                />
-              </svg>
-            </button>
-          </div>
-          <ul class="prices-list">
-            <li class="prices-item-1">
-              <p class="prices-item-name">Дизайн</p>
-              <p class="prices-item-subtitle">
-                <span class="big">₽150.000</span>&nbsp;/по частям
-              </p>
-              <p class="prices-item-subtitle">
-                Идеально для малых бизнесов и стартапов, которые хотят создать
-                свой узнаваемый стиль. Поможет выделиться среди конкурентов
-                засчет уникальности.
-              </p>
-              <p class="prices-get">Что вы получите</p>
 
-              <div class="block">
-                <span
-                  ><img src="images/check_circle.png" alt="" />Логотип
-                  ифирменный стиль
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/check_circle.png" alt="" />Один концепт
-                  дизайна
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/check_circle.png" alt="" />Дизайн для 10
-                  страниц
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/check_circle.png" alt="" />Анимации и
-                  интерактивные элементы
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/check_circle.png" alt="" />Правки до
-                  финального утверждения
-                </span>
-              </div>
-            </li>
-            <li class="prices-item-2">
-              <p class="prices-item-name">Мобильное приложение</p>
-              <p class="prices-item-subtitle">
-                <span class="big">₽700.000</span>&nbsp;/по частям
-              </p>
-              <p class="prices-item-subtitle">
-                Подходит для проектов с высокими требованиями, где необходимо
-                создать уникальное приложение с персонализированными функциями.
-              </p>
-              <p class="prices-get-1">Что вы получите</p>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Мобильное приложение для
-                  iOS и Android
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Интеграция с внешними
-                  сервисами и API
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Анимации и оригинальный
-                  дизайн
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Поддержка в течение 3
-                  месяцев
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Проектирование UX/UI
-                </span>
-              </div>
-              <div class="block">
-                <span><img src="images/logo.png" alt="" />Тестирование </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Публикация в магазины
-                  приложений
-                </span>
-              </div>
-            </li>
-            <li class="prices-item-3">
-              <p class="prices-item-name">Веб-сайт</p>
-              <p class="prices-item-subtitle">
-                <span class="big">₽250.000</span>&nbsp;/по частям
-              </p>
-              <p class="prices-item-subtitle">
-                Подходит для компаний, которым нужен многостраничный сайт, чтобы
-                наглядно представить свои услуги или продукты, а так же
-                рассказать о компании.
-              </p>
-              <p class="prices-get-1">Что вы получите</p>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Многостраничный сайт до
-                  10 страниц
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Уникальный дизайн
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Интеграция социальных
-                  сетей
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Поддержка в течение 3
-                  месяцев
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />SEO-оптимизация
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Интеграция CRM и других
-                  систем
-                </span>
-              </div>
-              <div class="block">
-                <span
-                  ><img src="images/logo.png" alt="" />Публикация в магазины
-                  приложений
-                </span>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="blog">
-        <div class="content container">
-          <h2 class="blog-title">Наш блог</h2>
-          <p class="blog-subtitle">
-            Здесь мы делимся полезными знаниями и новостями компании.
-          </p>
-          <div class="blog-actions">
-            <button class="button button--secondary">Об IT</button>
-            <button class="button button--secondary">Новости компании</button>
-            <button class="button button--secondary">Полезные знания</button>
-            <button class="button button--secondary">Про маркетинг</button>
-            <button class="button button--secondary">Про дизайн</button>
-            <button class="button button--secondary">Про разработку</button>
-          </div>
-          <ul class="blog-list">
-            <li class="blog-item">
-              <img
-                class="blog-item_image"
-                src="images/image-1.png"
-                alt="Полезные знания"
-              />
-              <p class="blog-item_title">Полезные знания</p>
-              <p class="blog-item_description">
-                Как выбрать подходящую платформу для мобильного приложения?
-              </p>
-              <p class="blog-item_description-1">
-                Выбор платформы для мобильного приложения может оказаться
-                сложной задачей. В этом посте мы рассмотрим плюсы и минусы
-                различных платформ, включая нативную и кроссплатформенную
-                разработку. Мы поделимся советами, как определить идеальный
-                вариант для вашего проекта, исходя из целевой аудитории и
-                бюджета.
-              </p>
-              <p class="blog-item_description-data">21.11.2024</p>
-            </li>
-            <li class="blog-item">
-              <img
-                class="blog-item_image"
-                src="images/image-2.png"
-                alt="Про дизайн"
-              />
-              <p class="blog-item_title">Про дизайн</p>
-              <p class="blog-item_description">
-                Тренды в дизайне интерфейсов в 2024 году
-              </p>
-              <p class="blog-item_description-1 text-2">
-                В мире дизайна важен не только талант, но и правильные
-                инструменты. В этом посте мы собрали список незаменимых
-                приложений и утилит для UX/UI-дизайнеров, которые помогут
-                ускорить процесс разработки и улучшить качество
-                пользовательского опыта. Узнайте, какие инструменты рекомендуют
-                профессионалы!
-              </p>
-              <div class="blokdata">
-                <p class="blog-item_description-data">18.11.2024</p>
-              </div>
-            </li>
-            <li class="blog-item">
-              <img
-                class="blog-item_image"
-                src="images/image-3.png"
-                alt="Про разработку/Полезные знания"
-              />
-              <div class="block-blog">
-                <p class="blog-item_title-3">Про разработку</p>
-                <p class="blog-item_title-3">Полезные знания</p>
-              </div>
-              <p class="blog-item_description">
-                10 ошибок при разработке приложений и как их избежать
-              </p>
-              <p class="blog-item_description-1 text-3">
-                При разработке приложений легко столкнуться с распространенными
-                ошибками, которые могут негативно повлиять на успех проекта. В
-                этом посте мы собрали 10 основных ошибок, которые следует
-                избегать, и поделимся полезными советами, как защитить свой
-                проект и обеспечить его успех на рынке. Узнайте, как сделать
-                ваше приложение лучше!
-              </p>
-              <p class="blog-item_description-data">10.11.2024</p>
-            </li>
-            <li class="blog-item">
-              <img
-                class="blog-item_image"
-                src="images/image-4.png"
-                alt="Новости компании"
-              />
-              <p class="blog-item_title">Новости компании</p>
-              <p class="blog-item_description">
-                Новые достижения нашей команды: итоги квартала
-              </p>
-              <p class="blog-item_description-1">
-                Мы рады поделиться с вами последними новостями из нашей
-                компании! В этом посте мы подведем итоги прошедшего квартала и
-                расскажем о наших больших достижениях. Наша команда успешно
-                завершила несколько важных проектов, внедрила новые технологии и
-                расширила клиентскую базу. Кроме того, мы провели несколько
-                социальных мероприятий и тренингов, направленных на развитие
-                наших сотрудников.
-              </p>
-              <p class="blog-item_description-data">31.10.2024</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="About-company">
-        <div class="container-companya container">
-          <h1 class="about-company-title">О компании</h1>
-          <p class="about-company-subtitle">
-            Здесь мы делимся полезными знаниями и новостями компании.
-          </p>
-        </div>
-        <div class="about-company-static container">
-          <div class="about-company-static-block">
-            <p class="about-company-static-description">
-              Мы команда единомышленников, объединенных страстью к технологиям.
-              Мы разрабатываем дизайны и приложения, которые не просто
-              привлекают внимание, но и решают реальные задачи бизнеса. Вместе
-              мы воплотим вашу идею в жизни, создавая продукт, который будет
-              работать на вас.
-            </p>
-
-            <div class="about-company-stati-grid">
-              <div class="about-company-stati-item">
-                <span class="number">8 лет</span>
-                <p class="description">
-                  помогаем разрабатывать инновационные IT решения
-                </p>
-              </div>
-              <div class="about-company-stati-item">
-                <span class="number">80+ клиентов</span>
-                <p class="description">
-                  среди которых 90% возвращаются к нам снова
-                </p>
-              </div>
-
-              <div class="about-company-stati-item">
-                <span class="number">4 офиса</span>
-                <p class="description">
-                  в ежедневном режиме работают по всей стране
-                </p>
-              </div>
-
-              <div class="about-company-stati-item">
-                <span class="number">30+ наград</span>
-                <p class="description">
-                  получили наши проекты на международных конкурсах
-                </p>
-              </div>
-            </div>
-          </div>
-          <img src="images/company.png" alt="" class="about-company-image" />
-        </div>
-      </section>
       <footer class="footer">
         <div class="footer-content container">
           <p>© 2010-2024 «FlexFlow»</p>
