--- a/blog.html
+++ b/blog.html
@@ -52,9 +52,7 @@
           </ul>
         </nav>
         <div class="header-actions">
-          <button
-            class="telegram-button button button--prproject-discussion_descriptionry"
-          >
+          <button class="telegram-button button button--primary">
             Написать в Telegram<svg
               width="16"
               height="16"
